--- a/src/app/pessoa/lista-pessoa/lista-pessoa/lista-pessoa.component.html
+++ b/src/app/pessoa/lista-pessoa/lista-pessoa/lista-pessoa.component.html
@@ -1,1 +1,30 @@
-<p>lista-pessoa works!</p>
+<h1>Pessoas</h1>
+<table class="table table-striped table-bordered table-hover">
+  <tbody>
+    <tr>
+      <th>Nome</th>
+      <th>Idade</th>
+      <th>Email</th>
+      <th class="text-center">
+        <a [routerLink]="['/pessoas/novo']" title="Novo" alt="Novo" class="btn btn-xs btn-success">
+          <i class="fa fa-plus" aria-hidden="true"></i> Novo
+        </a>
+      </th>
+    </tr>
+    <tr *ngFor="let pessoa of pessoas">
+      <td>{{pessoa.nome}}</td>
+      <td>{{pessoa.idade}}</td>
+      <td>{{pessoa.email}}</td>
+      <td class="text-center" style="width: 300px">
+        <a [routerLink]="['/pessoas/alterar/', pessoa.id]"  title="Editar" aria-multiline="Editar" class="btn btn-xs btn-info">
+          <i class="fa fa-edit" aria-hidden="true"></i> Editar
+        </a>
+        <a (click)="remover(pessoa.id ?? 0)" title="Remover" alt="Remover" class="btn btn-xs btn-danger">
+          <i class="fa fa-times" aria-hidden="true"></i> Remover
+        </a>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<p *ngIf="pessoas.length === 0">Nenhuma pessoa cadastrada.</p>
