--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
         <a class="navbar-brand" href="#">
           {{title}}
         </a>
+        <a class="navbar-brand" [routerLink]="['/enderecos']">
+          Cadastro de Endereco
+        </a>
       </div>
     </div>
   </nav>
