--- a/src/app/pessoa/editar-pessoa/editar-pessoa.component.html
+++ b/src/app/pessoa/editar-pessoa/editar-pessoa.component.html
@@ -63,7 +63,7 @@
       <button
         type="button"
         class="btn btn-primary"
-        (click)="alterar()"
+        (click)="alterar(pessoa.id!)"
         [disabled]="!formPessoa.form.valid"
         >
         <i class="fa fa-save" aria-hidden="true"></i> Salvar
