--- a/src/app/pessoa/inserir-pessoa/inserir-pessoa.component.html
+++ b/src/app/pessoa/inserir-pessoa/inserir-pessoa.component.html
@@ -42,6 +42,7 @@
         Digite a idade da pessoa.
       </div>
       </div>
+
       <label for="email">Email: </label>
       <input
         type="text"
@@ -60,20 +61,40 @@
             Digite email da pessoa.
           </div>
         </div>
-      <button
-        type="button"
-        class="btn btn-primary"
-        (click)="inserir()"
-        [disabled]="!formPessoa.form.valid"
-        >
-        <i class="fa fa-save" aria-hidden="true"></i> Salvar
-      </button>
-      <a
-        [routerLink]="['/pessoas']"
-        class="btn btn-secondary"
-      >
-        <i class="fa fa-arrow-left" aria-hidden="true"></i> Voltar
-      </a>
+
+        <label for="dataNascimento">Data de nascimento: </label>
+        <input
+          type="date"
+          class="form-control"
+          id="nascimento"
+          name="nascimento"
+          [(ngModel)]="pessoa.dataNascimento"
+          #nascimento="ngModel"
+          required
+          >
+          <div
+            *ngIf="nascimento.errors && (nascimento.dirty || nascimento.touched)"
+            class="alert alert-danger"
+          >
+            <div [hidden]="!nascimento.errors.required">
+              Digite a data de nascimento da pessoa.
+            </div>
+          </div>
+
+          <button
+            type="button"
+            class="btn btn-primary"
+            (click)="inserir()"
+            [disabled]="!formPessoa.form.valid"
+            >
+            <i class="fa fa-save" aria-hidden="true"></i> Salvar
+          </button>
+          <a
+            [routerLink]="['/pessoas']"
+            class="btn btn-secondary"
+          >
+            <i class="fa fa-arrow-left" aria-hidden="true"></i> Voltar
+          </a>
     </div>
   </form>
 </div>
